--- a/src/App.css
+++ b/src/App.css
@@ -68,36 +68,22 @@ h2 {
   background-color: #901CAD;
 }
 
-.wrapper {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  transition: margin .5s;
-  margin: 0 0 0 -250px;
+.page-enter {
+  opacity: 0;
+  transform: translateX(-100%);
 }
 
-.wrapper.is-nav-open {
-  margin-left: 0;
+.page-enter-active {
+  opacity: 1;
+  transform: translateX(0%);
+  transition: 300ms ease-out;
 }
 
-.nav {
-  position: relative;
-  width: 250px;
-  height: 100%;
-  padding: 20px;
-  border-right: 1px solid #ccc;
+.page-exit {
+  opacity: 1;
 }
 
-.nav__icon {
-  position: absolute;
-  top: 0;
-  right: -60px;
-  padding: 20px;
-  font-size: 20px;
-  cursor: pointer;
-  transition: color .3s;
-}
-
-.nav__icon:hover {
-  color: #5eb2ff;
+.page-exit-active {
+  opacity: 0;
+  transition: 300ms ease-in;
 }
