--- a/src/App.css
+++ b/src/App.css
@@ -69,8 +69,9 @@ h2 {
 }
 
 .page-enter {
-  opacity: 0;
-  transform: translateX(-100%);
+  opacity: 0.8;
+  transform: rotate(720deg) scale(3);
+  transform: translateX(100%);
 }
 
 .page-enter-active {
@@ -87,3 +88,4 @@ h2 {
   opacity: 0;
   transition: 300ms ease-in;
 }
+
